<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollViewAutor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.AutorActivity">



        <TextView
            android:id="@+id/textViewDatosAutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60sp"
            android:text="@string/nombre_autor"
            android:textAlignment="center"
            android:textColor="@color/colorNegro"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/email_autor"
            android:textAlignment="center"
            android:textColor="@color/colorNegro"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/web_autor"
            android:textAlignment="center"
            android:textColor="@color/colorNegro"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginBottom="56dp"
            app:srcCompat="@drawable/autor"/>


    </LinearLayout>

</ScrollView>