<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.nacho.
                    mannadrawe.activity.OrdenGeneradaActivity">

        <CheckBox
            android:id="@+id/checkBoxMostrarPdf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/ic_fondo_check_box_pdf"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/mostrarPdf"
            android:textColor="@color/colorNegro" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textViewFecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/fecha"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/textViewCodigo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/codigo"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/textViewNombreEmpleado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/nombre_usuario"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/textViewPrioridad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textViewNombreEmpleado"
                    android:layout_alignStart="@+id/textViewNombreEmpleado"
                    android:layout_below="@+id/textViewCodigoEmpleado"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/prioridad"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/textViewEstado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textViewPrioridad"
                    android:layout_alignStart="@+id/textViewPrioridad"
                    android:layout_below="@+id/textViewPrioridad"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/sintoma"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/textViewUbicacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:maxLength="160"
                    android:maxLines="4"
                    android:text="@string/ubicacion"
                    android:textColor="@color/colorPrimaryDark" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorFondo2"
                    android:orientation="vertical">


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/fab_margin"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/imageButton_galeria_content_orden_generada"
                    android:background="@drawable/ic_boton_redondo"
                    android:layout_marginTop="5dp"
                    android:scaleType="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_galeria"/>
                <ImageButton
                    android:id="@+id/imageButton_camara_content_orden_generada"
                    android:layout_marginTop="45dp"
                    android:background="@drawable/ic_boton_redondo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_camera_primary_dark"/>


            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorFondo2"
                android:maxLength="390"
                android:maxLines="11"
                android:text="@string/descripcion"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

            <ImageView
                android:id="@+id/imageButton_content_orden_generada_foto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="280dp"
                android:minWidth="280dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorFondo2"
                android:src="@drawable/ic_mantenimiento2" />
            </LinearLayout>

        </LinearLayout>




    </LinearLayout>


</ScrollView>