<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorFondo"
    android:focusableInTouchMode="true">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.CrearUsuarioActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="Datos empleado"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorFondo2"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20sp">

                <EditText
                    android:id="@+id/editTextCrearEmpleadoNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre_usuario"
                    android:inputType="textCapWords"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:textAlignment="center" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled = "true"
                app:passwordToggleDrawable="@drawable/ic_visibility"
                android:layout_margin="20sp">

                <EditText
                    android:id="@+id/editTextCrearEmpleadoCodigo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/codigo_ususario"
                    android:inputType="numberPassword"
                    android:maxLength="4"
                    android:maxLines="1"
                    android:textAlignment="center" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/admin"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorFondo2"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radioGroupAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:checked="false"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioButtonAdminSi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/string_si" />

                <RadioButton
                    android:id="@+id/radioButtonAdminNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/string_no" />


            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

</ScrollView>